--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,6 @@
         android:id="@+id/cuisine_it"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_margin="15dp"
         app:layout_constraintTop_toBottomOf="@id/cuisine_header"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,14 +79,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cuisine_it"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
+        android:id="@+id/storesLV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_margin="15dp"
         app:layout_constraintTop_toBottomOf="@id/all_header"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
